- MapViewModel : 이미지의 위치 정보가 없을 경우에 대한 상태 추가(MapUiState.PhotoNotLoad) - MapScreen : 카메라 사용시, 위치값을 읽어 오지 못하고 있음.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="name_map_fragment">Map Fragment</string>
     <string name="description_map_fragment">MapFragment를 사용한 지도 디스플레이</string>
     <string name="user_photo_image_view">사용자가 선택한 포토 이미지뷰</string>
+    <string name="no_image_with_location_info">위치 정보를 가지고 있는 이미지가 없습니다.</string>
 </resources>
